--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="shortcut icon" type="image/png/ico" href="/favicon.png" />
     <title>Dino Lair</title>
   </head>
   <body>
